tests/NormalTests/paczka1/fuzzy1/86413289.err
Error in line 2: A715 A715 97,5
Error in line 5: A715 A913 54,9
Error in line 25: 1ZGxDAp6C S,26 6,,1
Error in line 22: A715 S426 60,6
Error in line 29: 1ZGxDAp6C A715 9,5
Error in line 24: sadA S426 114,9
Error in line 38: sadA A913 75,3
